se corrigen cosas

--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,18 @@
 
     <h3>Diseño Web</h3>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Voluptatem unde doloremque quo hic tempora quaerat quis sit quod! 
-        Autem ex eveniet maxime fugiat corrupti quas sit numquam dignissimos ea excepturi.
-    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+
+    <h3>Aplicaciones Web</h3>
+
+    <p>Voluptatem unde doloremque quo hic tempora quaerat quis sit quod! </p>
+
+    <h3>E-Commerce</h3>
+
+    <p> Autem ex eveniet maxime fugiat corrupti quas sit numquam dignissimos ea excepturi.</p>
+
+    <h2>Contacto </h2>
+
+    <p>Todos los derechos reservados. David Tobia Freelancer </p>
 </body>
 </html>
